fixed spacing

--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ body {
 }
 
 .main {
-  padding: 10px 30px 20px 30px;
+  padding: 10px 30px 15px 30px;
   border-radius: 8px;
   box-shadow: 0 8px 15px rgba(0, 0, 0, 0.1);
   text-align: center;
@@ -65,7 +65,7 @@ body {
   padding: 20px 0px 0px 0px;
   border-radius: 5px;
   width: 100%;
-  margin: 10px;
+  margin-bottom: 10px;
 }
 
 .messageContainer {
@@ -87,11 +87,15 @@ h1 {
   font-size: 36px;
 }
 
+h2 {
+  margin: 15px 0px 20px 0px;
+}
+
 button {
   background-color: #00acc1;
   color: #edeff4;
   padding: 5px 10px;
-  margin: 5px;
+  margin: 7px 0px 5px 0px;
   border: none;
   cursor: pointer;
   font-size: 18px;
